[package]
name = "reptilx-contract-live"
version = "1.0.0"
description = "ReptilX Token Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reptilx_contract_live"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

